fixed image and button spacing

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 #card {
     background-color: #ffffff;
     padding: 12px;
-    border: 1px solid rgb(237, 142, 142);
+    border: 1px solid rgb(159, 162, 244);
     border-radius: 8px;
     width: 250px;
     height: max-content;
@@ -15,10 +15,10 @@
 
 }
 
-#card :hover {
+#card:hover {
     background-color: #ffffff;
     padding: 12px;
-    border: 1px solid rgb(195, 19, 19);
+    border: 1px solid rgb(107, 114, 205);
     border-radius: 8px;
     width: 250px;
     height: max-content;
@@ -26,9 +26,6 @@
     display: flex;
     flex-direction: column;
     gap: 0px;
-
-
-
 
 }
 
